minor update with py3.8

--- a/4_numpy_pandas.ipynb
+++ b/4_numpy_pandas.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Basic Data Science Libraries\n",
     "\n",
-    "This notebook contains a brief introduction into the basic data science libraries `numpy`, `pandas`, and `matplotlib`. These libraries help you to efficiently store and look at your data. It is especially important that you know how to access individual elements/rows/columns from a matrix or table with various indexing techniques. Therefore, make sure to play around here a bit until you feel comfortable with these methods.\n",
+    "This notebook contains a brief introduction into the basic data science libraries `numpy`, `pandas`, and `matplotlib`. These libraries help you to efficiently load, store, manipulate, and look at your data. It is especially important that you know how to access individual elements/rows/columns from a matrix or table with various indexing techniques. Therefore, make sure to play around here a bit until you feel comfortable with these methods.\n",
     "\n",
     "\n",
     "**Exercise:** After you're done with the tutorial, find a dataset of your own, load it with pandas, and examine the different variables."
@@ -145,8 +145,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# np.random provides different options to create random data\n",
-    "# create a 4x4 matrix with random, normally distributed values\n",
+    "# np.random provides different options to create random data.\n",
+    "# here we create a 4x4 matrix with random, normally distributed values.\n",
     "# you might want to set a random seed first to get reproducible results:\n",
     "# --> execute the cell a few times to see you always get a different matrix\n",
     "# --> then uncomment the line below and excecute it again a few times\n",
@@ -238,7 +238,7 @@
     "\n",
     "With the `matplotlib` library, it is possible to create highly customizable plots. It is also the basis for more advanced plotting libraries such as `seaborn`.\n",
     "\n",
-    "[This set of cheat sheets](https://github.com/matplotlib/cheatsheets) may be helpful for creating perfect plots."
+    "[This set of cheat sheets](https://github.com/matplotlib/cheatsheets) may be helpful for creating the perfect plots."
    ]
   },
   {
@@ -293,7 +293,7 @@
     "y = np.random.randn(100)\n",
     "# create a scatter plot of x vs y\n",
     "plt.figure()\n",
-    "# by passing for c an array of the same length as x and y,\n",
+    "# by passing for c (=color) an array of the same length as x and y,\n",
     "# each dot can have its individual color\n",
     "plt.scatter(x, y, c=x)\n",
     "plt.xlabel(\"X axis\")\n",
@@ -311,7 +311,7 @@
     "The `pandas` library takes our basic data manipulation to the next level. It is a lifesaver if you need to read in nasty excel files and helps you with all your basic data science tasks, e.g., if you want to get a quick overview of your data or create some simple plots. If you have used the R programming language before, some concepts here might be familiar to you.\n",
     "\n",
     "The most important data structure in pandas is the `DataFrame`, which is simply a table with all your data in it. \n",
-    "We'll always assume that our data is structured such that each row corresponds to one data point (or observation), while each column represents a different attribute/variable that was measured for the data points (in the machine learning contexts, these different attributes are usually refered to as \"features\"). \n",
+    "We'll always assume that our data is structured such that each row corresponds to one data point (or observation), while each column represents a different attribute/variable that was measured for the data points (in machine learning contexts, these different attributes are usually refered to as \"features\"). \n",
     "\n",
     "**Official `pandas` tutorial:** https://pandas.pydata.org/pandas-docs/stable/getting_started/index.html"
    ]
@@ -339,8 +339,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a dataframe from a matrix M with 100 rows and 3 columns\n",
-    "M = np.random.random((100, 3))\n",
+    "# create a dataframe from a numpy array M with 10 rows and 3 columns\n",
+    "M = np.random.random((10, 3))\n",
     "df = pd.DataFrame(M)\n",
     "df"
    ]
@@ -351,7 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert dataframe to numpy array\n",
+    "# convert dataframe back to a numpy array\n",
     "df.to_numpy()"
    ]
   },
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a more interesting dataframe from a dictionary (keys are columns (\"features\"))\n",
+    "# create a more interesting dataframe from a dictionary (keys are columns (=\"features\"))\n",
     "df = pd.DataFrame(\n",
     "       {\n",
     "          'sex': ['m', 'w', 'm', 'w'],\n",
@@ -380,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# notice the additional column on the left with 0-3 above; this is the index column\n",
+    "# notice the additional column on the left with 0-3 above; this is the index column.\n",
     "# for easier handeling of the data, we can explicitly set the subject_id column as our index\n",
     "df = df.set_index('subject_id')\n",
     "df"
@@ -400,7 +400,7 @@
    "outputs": [],
    "source": [
     "# select the column \"sex\" from the dataframe \n",
-    "# (returns a pandas series, similar to a flat array in numpy)\n",
+    "# (returns a pandas Series, similar to a flat array in numpy)\n",
     "df['sex']"
    ]
   },
@@ -410,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# by selecting a list of columns, the dataframe structure is preserved\n",
+    "# by selecting a list of columns, the DataFrame structure is preserved\n",
     "df[['sex']]"
    ]
   },
@@ -452,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# summary statistics of the dataframe\n",
+    "# summary statistics for the whole dataframe\n",
     "df.describe()"
    ]
   },
@@ -463,7 +463,7 @@
    "outputs": [],
    "source": [
     "# we can also compute different aggregations for different columns; just pass\n",
-    "# any function that are then called on the specified column, e.g. np.mean(df[\"BMI\"])\n",
+    "# any function that is then called on the specified column, e.g. np.mean(df[\"BMI\"])\n",
     "# maximum for height, minimum for weight, mean for BMI\n",
     "df.agg({'height': max, 'weight': min, 'BMI': np.mean}) "
    ]
@@ -477,7 +477,7 @@
     "# by grouping based on one column...\n",
     "g = df.groupby('sex')\n",
     "# ...we can compute statistics for different groups\n",
-    "g.BMI.mean()"
+    "g[\"BMI\"].mean()"
    ]
   },
   {
@@ -506,7 +506,7 @@
    "outputs": [],
    "source": [
     "# we can export our data as a .csv file (other formats are also supported)\n",
-    "# (have a look at the folder to see the file that was created!)\n",
+    "# (--> have a look at the folder to see the file that was created!)\n",
     "df.to_csv('bmi_dataset.csv')"
    ]
   },
@@ -527,8 +527,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# note how our index column was treated like just a regular column\n",
-    "# with additional options, we can already correctly set our index column while loading\n",
+    "# note how our index column was treated like just a regular column.\n",
+    "# with additional options, we can already correctly set our index column while loading.\n",
     "# other options also allow to e.g. skip some lines at the beginning of a file, etc.\n",
     "df_imported = pd.read_csv('bmi_dataset.csv', index_col='subject_id')\n",
     "df_imported"
@@ -636,7 +636,7 @@
    "metadata": {},
    "source": [
     "#### Dealing with missing values (NaNs)\n",
-    "NaN (\"Not a Number\") or missing values in your data are no fun and can lead to errors when using this data down the road. Therefore you should remove these entries (or fill them with sensible defaults, though this can result in other problems)."
+    "NaN (\"Not a Number\") or missing values in your data are no fun and can lead to errors when using this data down the road. Therefore, you should remove these entries (or fill them with sensible defaults, though this can result in other problems)."
    ]
   },
   {
@@ -657,7 +657,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check how many NaNs you have per column (try also without the .sum() or .sum(axis=1))\n",
+    "# check how many NaNs you have per column\n",
+    "# (--> try also without the .sum() or .sum(axis=1))\n",
     "df.isnull().sum(axis=0)"
    ]
   },
@@ -690,11 +691,44 @@
     "# usually it's safest if we just remove the data points that have NaNs anywhere\n",
     "# instead of adding garbage values to the data.\n",
     "# but be aware that NaNs might not be random, e.g., in surveys rich people might more\n",
-    "# often to decline to answer questions about their wealth than poor people\n",
+    "# often decline to answer questions about their wealth than middle class people\n",
     "# so removing data points this way can create a systematic bias in the dataset.\n",
-    "# just be sure to note your decision somewhere and communicate it when you present your results!\n",
-    "df = df.dropna(axis=0, how=\"any\")  # axis: drop rows, not columns; how: if there is a NaN anywhere\n",
+    "# what ever you do, just be sure to note your decision somewhere\n",
+    "# and communicate it when you present your results!\n",
+    "df = df.dropna(axis=0, how=\"any\")  # axis=0: drop rows, not columns; how='any': drop if there is a NaN in one field\n",
     "# rows 1 and 3 are missing now\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# since some rows were removed, be careful when indexing the df!\n",
+    "# row 0 is still present\n",
+    "print(\"row 0:\\n\", df.iloc[0])\n",
+    "# row 0 also has index 0\n",
+    "print(\"\\n\\nindex 0:\\n\", df.loc[0])\n",
+    "# row 1 now corresponds to index 2\n",
+    "print(\"\\n\\nrow 1:\\n\", df.iloc[1])\n",
+    "print(\"\\n\\nindex 2:\\n\", df.loc[2])\n",
+    "# index 1 is missing - this will give a KeyError!\n",
+    "print(\"\\n\\nindex 1:\\n\", df.loc[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to avoid errors, it's often a good idea to reset the index\n",
+    "# inplace: change df directly instead of returning a new object\n",
+    "# drop: don't keep old index\n",
+    "df.reset_index(inplace=True, drop=True)\n",
+    "# df.loc[1] would work again now\n",
     "df"
    ]
   },
@@ -722,10 +756,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot x2 again to examine these few large values a bit more in detail\n",
+    "# plot x2 again to examine these few large values in a bit more detail\n",
     "plt.figure()\n",
-    "# plot x2 against some small random jitter\n",
-    "plt.scatter(df[\"x2\"], 0.1*np.random.randn(len(df[\"x2\"])))"
+    "# plot x2 against some small random jitter so the dots don't overlap too much\n",
+    "plt.scatter(df[\"x2\"], 0.1*np.random.randn(len(df[\"x2\"])))\n",
+    "plt.xlabel(\"x2\")\n",
+    "plt.ylabel(\"random jitter\")"
    ]
   },
   {
@@ -735,11 +771,13 @@
    "outputs": [],
    "source": [
     "# try a transformation of x2 to get the values more normally distributed, i.e.,\n",
-    "# without these few extreme values\n",
+    "# without these few very extreme values\n",
     "x2_new = np.log(df[\"x2\"] + 1)\n",
     "plt.figure()\n",
     "# not perfect, but much better!\n",
-    "plt.scatter(x2_new, 0.1*np.random.randn(len(x2_new)))"
+    "plt.scatter(x2_new, 0.1*np.random.randn(len(x2_new)))\n",
+    "plt.xlabel(\"x2\")\n",
+    "plt.ylabel(\"random jitter\")"
    ]
   },
   {
@@ -747,7 +785,7 @@
    "metadata": {},
    "source": [
     "#### Dealing with time series data\n",
-    "Time series data is often stored in specialized databases, which export the data in a so-called \"long format\", where the variables are no longer individual columns (as opposed to the \"wide format\" that we were dealing with so far). To later use this data with our machine learning methods, we need to transform it into the wide format (data points/observations in rows, variables/features in columns).\n",
+    "Time series data is often stored in specialized databases, which sometimes export the data in a so-called \"long format\", where the variables are no longer stored in individual columns (like in the regular \"wide format\" that we were dealing with so far). To later use this data with our machine learning methods, we therefore first need to transform it into the wide format (data points/observations in rows, variables/features in columns).\n",
     "\n",
     "The dataset is originally from [here](http://archive.ics.uci.edu/ml/datasets/Occupancy+Detection+) but was modified for our purposes. It contains timestamped data of different sensors (temp, co2, etc.) in a room and how many people are currently present in the room."
    ]
@@ -760,6 +798,7 @@
    "source": [
     "# load a time series dataset in long format\n",
     "df = pd.read_csv(\"data/test_timeseries.csv\")\n",
+    "# variable contains the column name and value the corresponding value at this timestamp\n",
     "df"
    ]
   },
@@ -769,7 +808,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check what kind of variables there are\n",
+    "# check what kind of variables there are --> these will be our columns later\n",
     "df[\"variable\"].unique()"
    ]
   },
@@ -789,7 +828,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# apparently, timestamp was detected as a string (\"object\")\n",
+    "# apparently, timestamp was detected as a string (\"object\").\n",
     "# we want to transform it into a proper datetime format to enable\n",
     "# a bunch of data operations on time stamps (incl. correct plotting)\n",
     "df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], format=\"%Y-%m-%d %H:%M:%S\")\n",
@@ -804,7 +843,8 @@
    "source": [
     "# now we want to convert the long format to our regular wide format\n",
     "df_wide = df.pivot(index='timestamp', columns='variable')\n",
-    "# by default, the columns are now a MultiIndex; with droplevel we get a more normal dataframe\n",
+    "# by default, the columns are now a MultiIndex; with droplevel we can transform them \n",
+    "# into a regular Index so we can work with the dataframe as we're used to\n",
     "df_wide.columns = df_wide.columns.droplevel(0)\n",
     "df_wide"
    ]
@@ -815,9 +855,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lets plot the time series (only works this nicely because \n",
-    "# the timestamp is the index column and was correctly formatted)\n",
-    "df_wide.plot(subplots=True);"
+    "# lets plot the time series (this only works so nicely because \n",
+    "# the timestamp is the index column and was correctly formatted!)\n",
+    "df_wide.plot(subplots=True);  # the \";\" at the end prevents unnecessary additional output"
    ]
   },
   {
@@ -828,10 +868,12 @@
    "source": [
     "# often, time series data is sampled with a very high frequency (every few seconds)\n",
     "# but the sensor measurements might not change that much over time\n",
-    "# you can use \"resample\" to change the sampling frequency\n",
+    "# you can use \"resample\" to change the sampling frequency and reduce the size of your dataset.\n",
     "# by calling .mean() on the resampler, we tell it to compute the new values as the mean\n",
     "# of the values in one interval. you could also use the function to upsample your data.\n",
+    "print(\"original shape:\", df_wide.shape)\n",
     "df_wide = df_wide.resample(\"10min\").mean()\n",
+    "print(\"downsampled shape:\", df_wide.shape)\n",
     "# looks a bit smoother than above\n",
     "df_wide.plot(subplots=True);"
    ]
@@ -842,13 +884,13 @@
    "source": [
     "## Exercise: Work with your own data\n",
     "\n",
-    "Find a dataset, load it with pandas, make sure it is in the correct format (data points in rows, variables/features in columns; columns should have the correct column names), and examine the different variables (e.g. by plotting them).\n",
+    "Find a dataset, load it with pandas, make sure it is in the correct (wide) format (data points in rows, variables/features in columns; columns should have the correct column names), and examine the different variables (e.g. by plotting them) to see if they are (approximately) normally/uniformly distributed.\n",
     "\n",
     "You can also do this in a new notebook, just remember to import all needed libraries.\n",
     "\n",
     "If you don't have a dataset of your own that you want to explore, maybe you'll find one here that interests you: https://www.kaggle.com/datasets?fileType=csv&sizeEnd=100%2CMB\n",
     "\n",
-    "Don't be afraid to google if you don't know how to do something (search in English to get more results!). You can also get the documentation of any function by writing a `?` after its name to see, for example, what parameters you can pass to it."
+    "Don't be afraid to google if you don't know how to do something (tip: search in English to get more results!). You can also get the documentation of any function by writing a `?` after its name to see, for example, what parameters you can pass to it."
    ]
   },
   {
@@ -885,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
