--- a/3_exercise_solutions.ipynb
+++ b/3_exercise_solutions.ipynb
@@ -191,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.85 ms ± 183 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "1.08 ms ± 16 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "122 µs ± 3.83 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "93.3 µs ± 1.39 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "103 µs ± 17.7 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "87 µs ± 979 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
