upload your own data file if you're working with binder

--- a/4_numpy_pandas.ipynb
+++ b/4_numpy_pandas.ipynb
@@ -890,6 +890,8 @@
     "\n",
     "If you don't have a dataset of your own that you want to explore, maybe you'll find one here that interests you: https://www.kaggle.com/datasets?fileType=csv&sizeEnd=100%2CMB\n",
     "\n",
+    "If you're not working on your own computer, but e.g. online with Binder you can go back to the folder view with the list of notebooks and in the top right there is a button \"Upload\" where you can e.g. upload a .csv file from your computer to work with online.\n",
+    "\n",
     "Don't be afraid to google if you don't know how to do something (tip: search in English to get more results!). You can also get the documentation of any function by writing a `?` after its name to see, for example, what parameters you can pass to it."
    ]
   },
