upload math tutorial

--- a/4_numpy_pandas.ipynb
+++ b/4_numpy_pandas.ipynb
@@ -75,6 +75,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# add 5 to all elements\n",
+    "M + 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# elementwise multiplication of all entries in the matrices\n",
+    "M*M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# elementwise addition of all entries in the matrices\n",
+    "M+M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# elementwise log of all entries in the matrix\n",
+    "np.log(M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# multiply the matrix M with the vector a\n",
     "np.dot(M, a)"
    ]
@@ -85,7 +125,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compute the scalar product of the vector a with itself\n",
+    "np.dot(a, a)  # 1*1 + (-2)*(-2) + 0*0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# multiply the matrix M with its transpose\n",
+    "# (2 x 3) (3 x 2) = (2 x 2)\n",
     "np.dot(M, M.T)"
    ]
   },
@@ -95,17 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# elementwise multiplication\n",
-    "M*M"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make sure the dimensions always line up, otherwise you'll get an error like this\n",
+    "# make sure the inner dimensions always line up, otherwise you'll get an error like this\n",
     "np.dot(M, M)"
    ]
   },
@@ -748,6 +789,17 @@
    "source": [
     "# plot the distribution of values for each column\n",
     "df.hist(bins=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create histograms of all columns and additionally scatter plots for the values\n",
+    "# in each column against the corresponding values in every other column\n",
+    "pd.plotting.scatter_matrix(df);  # the \";\" at the end prevents unnecessary text output before the plot"
    ]
   },
   {
