include torch for installation

--- a/test_installation.ipynb
+++ b/test_installation.ipynb
@@ -27,7 +27,20 @@
     "print(\"matplotlib\", matplotlib.__version__)  # 3.3.1\n",
     "import plotly\n",
     "print(\"plotly\", plotly.__version__)      # 4.9.0\n",
-    "print(\"Congratulations! Your installation was successful!\")"
+    "print(\"Congratulations! Your installation of the basic libraries was successful!\")\n",
+    "# the following libraries are needed for the neural network example\n",
+    "# if you have a computer with a (CUDA-enabled Nvidia) GPU, checkout this site:\n",
+    "# https://pytorch.org/get-started/locally/\n",
+    "# to install the correct version that can utilize the capabilities of your GPU\n",
+    "# (if you're working on a normal laptop and you don't know what GPU means,\n",
+    "# don't worry about it and just execute `$ pip install torch torchvision skorch`)\n",
+    "import torch\n",
+    "print(\"torch\", torch.__version__)        # 1.7.0\n",
+    "import torchvision\n",
+    "print(\"torchvision\", torchvision.__version__)  # 0.8.1\n",
+    "import skorch\n",
+    "print(\"skorch\", skorch.__version__)      # 0.9.0\n",
+    "print(\"Congratulations! Your installation of the neural network libraries was successful!\")"
    ]
   },
   {
