set up to work with google colab

--- a/4_numpy_pandas.ipynb
+++ b/4_numpy_pandas.ipynb
@@ -687,7 +687,12 @@
    "outputs": [],
    "source": [
     "# read in a dataset\n",
-    "df = pd.read_csv(\"data/test_na.csv\")\n",
+    "try: \n",
+    "    # load data locally from repository folder\n",
+    "    df = pd.read_csv(\"data/test_na.csv\")\n",
+    "except FileNotFoundError:\n",
+    "    # directly access file from github (for google colab)\n",
+    "    df = pd.read_csv(\"https://raw.githubusercontent.com/cod3licious/python_tutorial/master/data/test_na.csv\")\n",
     "# there are some NaNs!\n",
     "df"
    ]
@@ -849,7 +854,12 @@
    "outputs": [],
    "source": [
     "# load a time series dataset in long format\n",
-    "df = pd.read_csv(\"data/test_timeseries.csv\")\n",
+    "try: \n",
+    "    # load data locally from repository folder\n",
+    "    df = pd.read_csv(\"data/test_timeseries.csv\")\n",
+    "except FileNotFoundError:\n",
+    "    # directly access file from github (for google colab)\n",
+    "    df = pd.read_csv(\"https://raw.githubusercontent.com/cod3licious/python_tutorial/master/data/test_timeseries.csv\")\n",
     "# variable contains the column name and value the corresponding value at this timestamp\n",
     "df"
    ]
@@ -981,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
