--- a/test_installation.ipynb
+++ b/test_installation.ipynb
@@ -16,17 +16,17 @@
     "# check versions of the libraries\n",
     "# they should not be too much behind the ones in the comments...\n",
     "import numpy\n",
-    "print(\"numpy\", numpy.__version__)        # 1.19.1\n",
+    "print(\"numpy\", numpy.__version__)        # >= 1.18.5\n",
     "import pandas\n",
-    "print(\"pandas\", pandas.__version__)      # 1.1.3\n",
+    "print(\"pandas\", pandas.__version__)      # >= 1.1.3\n",
     "import scipy\n",
     "print(\"scipy\", scipy.__version__)        # 1.4.1\n",
     "import sklearn\n",
-    "print(\"sklearn\", sklearn.__version__)    # 0.23.2\n",
+    "print(\"sklearn\", sklearn.__version__)    # 0.24.1\n",
     "import matplotlib\n",
-    "print(\"matplotlib\", matplotlib.__version__)  # 3.3.1\n",
+    "print(\"matplotlib\", matplotlib.__version__)  # >= 3.3.1\n",
     "import plotly\n",
-    "print(\"plotly\", plotly.__version__)      # 4.9.0\n",
+    "print(\"plotly\", plotly.__version__)      # >= 4.9.0\n",
     "print(\"Congratulations! Your installation of the basic libraries was successful!\")\n",
     "# the following libraries are needed for the neural network example\n",
     "# if you have a computer with a (CUDA-enabled Nvidia) GPU, checkout this site:\n",
@@ -35,7 +35,7 @@
     "# (if you're working on a normal laptop and you don't know what GPU means,\n",
     "# don't worry about it and just execute `$ pip install torch torchvision skorch`)\n",
     "import torch\n",
-    "print(\"torch\", torch.__version__)        # 1.7.0\n",
+    "print(\"torch\", torch.__version__)        # >= 1.6.0\n",
     "import torchvision\n",
     "print(\"torchvision\", torchvision.__version__)  # 0.8.1\n",
     "import skorch\n",
@@ -67,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
