link to code style guide

--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -15,6 +15,8 @@
     "- [Video Tutorials on YouTube](https://www.youtube.com/playlist?list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU)\n",
     "- [Beginners Computer Science & Python Course on Udacity](https://eu.udacity.com/course/intro-to-computer-science--cs101)\n",
     "\n",
+    "For bonus points, also have a look at the official [**Python Code Style Guide**](https://www.python.org/dev/peps/pep-0008/). \n",
+    "\n",
     "You can execute the code in the cells by clicking into a cell and pressing \"shift\"+\"enter\" or clicking the \"run\" button at the top. Feel free to experiment a bit by changing the code in the examples to see what happens. Don't worry if you get any error messages - consider them hints on how to do better ;-)\n",
     "\n",
     "Instead of just running through the examples, it helps to first think about what you would expect the output of a code cell to be and then execute it to see if you were right. If you weren't, please make sure you understand why and what is happening in the code!\n",
@@ -1856,7 +1858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
