switch to f-strings for string formatting

--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -382,7 +382,8 @@
    "source": [
     "# a nicer way to do something like this is string formatting\n",
     "# this allows you to include the values of other variables in a string\n",
-    "formatted_string = \"This is the value of width: %i\" % width\n",
+    "# see here for an overview: https://zetcode.com/python/fstring/\n",
+    "formatted_string = f\"This is the value of width: {width}\"\n",
     "formatted_string"
    ]
   },
@@ -393,7 +394,7 @@
    "outputs": [],
    "source": [
     "# this also works for multiple variables\n",
-    "\"These are the values of width: %i and height: %i\" % (width, height)"
+    "f\"These are the values of width: {width} and height: {height}\""
    ]
   },
   {
@@ -402,16 +403,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# you have to use different placeholders for different datatypes:\n",
-    "# %i is for integers\n",
-    "# %f is for floats\n",
-    "# %s is for strings\n",
-    "# %r uses the internal representation\n",
+    "# this works with different datatypes\n",
     "a_float = 5.896\n",
     "a_str = \"FOO\\nBAR\"\n",
     "print(a_float)\n",
     "print(a_str)\n",
-    "print(\"This is the printed output of the float a_float: %f and the str a_str: %s\" % (a_float, a_str))"
+    "print(f\"This is the printed output of the float a_float: {a_float} and the str a_str: {a_str}\")"
    ]
   },
   {
@@ -420,8 +417,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# see what happens if you use %r instead:\n",
-    "print(\"This is the printed output of the float a_float: %r and the str a_str: %r\" % (a_float, a_str))"
+    "# by using repr() you can print the internal representation of the object\n",
+    "print(f\"This is the printed output of the float a_float: {repr(a_float)} and the str a_str: {repr(a_str)}\")"
    ]
   },
   {
@@ -430,10 +427,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with %f, floats are by default included with 6 places after the decimal point\n",
-    "# with additional options, the output can be adapted:\n",
-    "print(\"This is the default output of the float: %f\" % a_float)\n",
-    "print(\"This is the float rounded to 2 places after the decimal point: %.2f\" % a_float)"
+    "# with :f, additional float formatting option can be supplied\n",
+    "# by default the floats are shown with 6 places after the decimal point\n",
+    "# but the output can be adapted with .x:\n",
+    "print(f\"This is the default output of the float: {a_float:f}\")\n",
+    "print(f\"This is the float rounded to 2 places after the decimal point: {a_float:.2f}\")"
    ]
   },
   {
@@ -827,10 +825,10 @@
     "var0 = 8, \"hey\"        # var0 is a tuple with both values\n",
     "print(\"var0:\", var0)\n",
     "var1, var2 = var0  # the 2 values are unpacked into the two variables\n",
-    "print(\"var1: %r,     var2: %r\" % (var1, var2))\n",
+    "print(f\"var1: {var1},   var2: {var2}\")\n",
     "# this is really handy for switching the values of 2 variables, as you don't need a temp variable\n",
     "var1, var2 = var2, var1 + 1\n",
-    "print(\"var1: %r, var2: %r\" % (var1, var2))"
+    "print(f\"var1: {var1}, var2: {var2}\")"
    ]
   },
   {
@@ -1248,7 +1246,7 @@
     "# when you iterate over a dict, you iterate over the keys\n",
     "for key in a_dict:\n",
     "    # print out the key and its associated value\n",
-    "    print(\"key: %r; value: %r\" % (key, a_dict[key]))"
+    "    print(f\"key: {key}; value: {a_dict[key]}\")"
    ]
   },
   {
@@ -1275,7 +1273,7 @@
     "# with it you get both the element of a list as well as the index of this element in the list\n",
     "for i, elem in enumerate(a_list):\n",
     "    # i contains the index of elem\n",
-    "    print(\"Element %i: %r\" % (i, elem))"
+    "    print(f\"Element {i}: {elem}\")"
    ]
   },
   {
@@ -1296,7 +1294,7 @@
     "i = 0\n",
     "# you stop if i is larger than the last index of the list\n",
     "while i < len(a_list):\n",
-    "    print(\"Element %i: %r\" % (i, a_list[i]))\n",
+    "    print(f\"Element {i}: {a_list[i]}\")\n",
     "    # don't forget to increase i, otherwise you would print the same line until the end of times!\n",
     "    i += 1  # shortcut for  i = i + 1"
    ]
@@ -1317,11 +1315,11 @@
     "# exercise: set i to different values and see what happens\n",
     "i = 42\n",
     "if i < 10:\n",
-    "    print(\"%i is less than 10\" % i)\n",
+    "    print(f\"{i} is less than 10\")\n",
     "elif i <= 100:\n",
-    "    print(\"%i is between 10 and 100\" % i)\n",
+    "    print(f\"{i} is between 10 and 100\")\n",
     "else:\n",
-    "    print(\"%i is greater than 100\" % i)"
+    "    print(f\"{i} is greater than 100\")"
    ]
   },
   {
@@ -1336,9 +1334,9 @@
     "# they all get checked sequentially and possibly executed.\n",
     "i = 4\n",
     "if i < 10:\n",
-    "    print(\"%i is less than 10\" % i)\n",
+    "    print(f\"{i} is less than 10\")\n",
     "if i < 100:\n",
-    "    print(\"%i is less than 100\" % i)"
+    "    print(f\"{i} is less than 100\")"
    ]
   },
   {
@@ -1365,7 +1363,7 @@
     "i = 24\n",
     "# \"AAA and BBB\" is only True if both AAA and BBB evaluate to True\n",
     "if i >= 10 and i <= 100:\n",
-    "    print(\"%i is between 10 and 100\" % i)"
+    "    print(f\"{i} is between 10 and 100\")"
    ]
   },
   {
@@ -1377,7 +1375,7 @@
     "# \"AAA or BBB\" is True if either AAA, BBB, or both AAA and BBB evaluate to True\n",
     "if i < 10 or i > 100:\n",
     "    # no print output means we didn't get inside here\n",
-    "    print(\"%i is either smaller than 10 or greater than 100\" % i)"
+    "    print(f\"{i} is either smaller than 10 or greater than 100\")"
    ]
   },
   {
@@ -1410,7 +1408,7 @@
     "while a_list:\n",
     "    # pop removes and returns the last element\n",
     "    elem = a_list.pop()\n",
-    "    print(\"Popped %r\" % elem)\n",
+    "    print(\"Popped\", elem)\n",
     "print(a_list)"
    ]
   },
@@ -1598,8 +1596,8 @@
     "        count_dict[word] = 1\n",
     "# we're done counting! create some nice output by printing the words with decreasing frequency\n",
     "for word in sorted(count_dict, key=count_dict.get, reverse=True):\n",
-    "    # %10s is similar to %.2f: we tell the string how many spaces it should take up\n",
-    "    print(\"%10s: %i\" % (word, count_dict[word]))"
+    "    # :10 is similar to :.2f: we tell the string how many spaces it should take up\n",
+    "    print(f\"{word:10}: {count_dict[word]}\")"
    ]
   },
   {
@@ -1638,7 +1636,7 @@
    "source": [
     "# a simple function to add 2 numbers\n",
     "def add_numbers(a, b=10):\n",
-    "    print(\"[add_numbers] a is %r, b is %r\" % (a, b))\n",
+    "    print(f\"[add_numbers] a is {a}, b is {b}\")\n",
     "    return a + b\n",
     "\n",
     "c = add_numbers(5, 9)\n",
