lambda function in tutorial and updated links

--- a/1_python_basics.ipynb
+++ b/1_python_basics.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Python Basics\n",
     "\n",
-    "This is an interactive Jupyter Notebook explaining the very basics of Python that you'll need for the Machine Learning Workshop.\n",
+    "This is an interactive Jupyter Notebook explaining the very basics of Python that you'll need for the Machine Learning course.\n",
     "\n",
     "Please make sure you understand everything mentioned here and are able to solve the exercises in the next notebook!\n",
     "\n",
@@ -19,13 +19,13 @@
     "\n",
     "You can execute the code in the cells by clicking into a cell and pressing \"shift\"+\"enter\" or clicking the \"run\" button at the top. Feel free to experiment a bit by changing the code in the examples to see what happens. Don't worry if you get any error messages - consider them hints on how to do better ;-)\n",
     "\n",
-    "Instead of just running through the examples, it helps to first think about what you would expect the output of a code cell to be and then execute it to see if you were right. If you weren't, please make sure you understand why and what is happening in the code!\n",
+    "Instead of just running through the examples, **it helps to first think about what you would expect the output of a code cell to be and then execute it to see if you were right**. If you weren't, please make sure you understand why and what is happening in the code!\n",
     "\n",
     "If you see a number in the square brakets next to a cell (e.g. `In [1]`), then the cell was already executed. If the brakets are empty, run the cell to execute the code in it and see the output. If you want to try out something else but not erase the given code, press the \"+\" button at the top to add a new cell below the currently selected cell. \n",
     "\n",
     "You have to execute all the cells starting at the beginning for everything to work as expected. If you change any variable names or their values, be prepared for different outcomes. You can execute cells multiple times and jump back and forth; the number next to the cell tells you the order of execution - if a cell below changes a variable used in the cell above it and you execute the cell above again, the output might be different from before as it uses the updated variable value. \n",
     "\n",
-    "Should the code get stuck (`In [*]` means the cell is currently executing the code in it; in our examples this should never take more than a few seconds), click the \"stop\" button at the top or select \"Kernel > Interrupt\" from the menu bar. If all goes wrong, just close the tab with the notebook, go back to the [GitHub repository](https://github.com/cod3licious/python_tutorial) and open it again."
+    "Should the code get stuck (`In [*]` means the cell is currently executing the code in it; in our examples this should never take more than a few seconds), click the \"stop\" button at the top or select \"Kernel > Interrupt\" from the menu bar."
    ]
   },
   {
@@ -443,7 +443,7 @@
     "# strings also have a bunch of methods that can be called on them to change the string\n",
     "# for a complete list check the documentation: \n",
     "# https://docs.python.org/3/library/stdtypes.html#string-methods\n",
-    "a_str = \"This is a sentence. And here we have another sentences which is longer.\"\n",
+    "a_str = \"This is a sentence. And here we have another sentence, which is longer.\"\n",
     "# everything in lower case\n",
     "print(a_str.lower())\n",
     "# calling such a method on a string returns a new string, the original variable remains unchanged\n",
@@ -1691,6 +1691,28 @@
     "print(\"return value for -5:\", is_greater_than_10(-5))\n",
     "print(\"return value for 10:\", is_greater_than_10(10))\n",
     "print(\"return value for 11:\", is_greater_than_10(11))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lambda functions\n",
+    "\n",
+    "Lambda functions are anonymous functions, i.e., they are not defined by name and instead of the keyword `def`, they are defined with `lambda`. Usually, they are very short (one liners!) and straightforward, and therefore often used to define functions that are passed as arguments to other functions such as `sorted()` or `max()`.\n",
+    "\n",
+    "For example, in the cell above, we sorted `a_list` by passing the `square()` function to the `key` argument to sort the values in the list based on their squared values. This can be done in a more concise way by using a lambda function instead of defining a separate function (especially if this function is not used anywhere else in the code):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# x is the argument that is passed to the function and what comes after the : is the return value\n",
+    "# (also works with multiple arguments, i.e., could also define, e.g., lambda x, y: x + y)\n",
+    "sorted(a_list, key=lambda x: x**2)"
    ]
   },
   {
