--- a/4_numpy_pandas.ipynb
+++ b/4_numpy_pandas.ipynb
@@ -272,6 +272,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# please note that by default, numpy arrays (and pandas dataframes) \n",
+    "# are not copied, but only passed as a reference, i.e.\n",
+    "# Q does not contain a copy of R, but references the same underlying object\n",
+    "Q = R\n",
+    "# set first row of Q to 1\n",
+    "Q[0, :] = 1\n",
+    "# notice how first row of R has changed as well\n",
+    "R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can circumvent this by explicitly making a copy\n",
+    "Q = R.copy()\n",
+    "# set first row of Q to 2\n",
+    "Q[0, :] = 2\n",
+    "# R stays the same\n",
+    "R"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
